
syntax = "proto3";

package sql_ipc;
option java_package="com.karfield.automatrix.ipc";

service SqlIpc {
    rpc QuerySingleSql(ExecuteSqlRequest) returns (QuerySingleSqlResponse);
    rpc ExecuteSingleSql(ExecuteSqlRequest) returns (ExecuteSingleSqlResponse);
    rpc ExecuteMultipleSqls(ExecuteSqlRequest) returns (ExecuteMultipleSqlsResponse);
}

message ExecuteSqlRequest {
    string trace_id = 1;
    string sql = 2;
    bytes json_arguments = 3;
    string default_db_code = 4;
}

message SqlQueryColumn {
    string column_name = 1;
    string column_type = 2;
}

message SqlQueryResult {
    repeated SqlQueryColumn columns = 1;
    repeated bytes json_records = 2;
}

message SqlExecuteResult {
    uint64 last_insert_id = 1;
    uint64 rows_effected = 2;
}

message SqlFailure {
    string code = 1;
    string message = 2;
}

message QuerySingleSqlResponse {
    string trace_id = 1;
    string db_code = 2;
    string sql = 3;
    oneof result {
        SqlQueryResult query_result = 4;
        SqlFailure failure = 5;
    }
}

message ExecuteSingleSqlResponse {
    string trace_id = 1;
    string db_code = 2;
    string sql = 3;
    oneof result {
        SqlExecuteResult exec_result = 4;
        SqlFailure failure = 5;
    }
}

message SqlExecution {
    string sql = 1;
    oneof result {
        SqlQueryResult query_result = 10;
        SqlExecuteResult exec_result = 11;
        SqlFailure failure = 12;
    }
}

message ExecuteMultipleSqlsResponse {
    string trace_id = 1;
    string db_code = 2;
    repeated SqlExecution results = 3;
}
