syntax = "proto3";

package ocr_ipc;
option java_package="com.karfield.automatrix.ipc";

service OcrIpc {
    rpc ResolveCaptchaImage(CaptchaImage) returns (ResolvedCaptchaAnaswer);
}

message CaptchaImage {
    string trace_id = 1;
    uint32 width = 2;
    uint32 height = 3;
    string format = 4;
    bytes image = 5;
    string provider = 6;
}

message ResolvedCaptchaAnaswer {
    string trace_id = 1;
    string answer = 2;
}
